# ai-agent-backend

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  agent.py  agent_async.py  agent_manager.py  agent_manager_test.py  agents_manager.py  async_memory.py  cache_manager.py  classify_prompts.py  cohere_rerank.py  custom_text_loader.py  doc_manager.py  docker-compose.dev.yml  docker-compose.prod.yml  document_summarizer.py  document_tree_summarizer.py  ecs-dev-release-task-definition.json  ecs-dev-task-definition.json  ecs-prod-release-task-definition.json  fail_function.py  functions_endpoint.py  functions_manager.py  functions_manager_test.py  generative_conversation_summarized_memory.py  generative_memory.py  generative_memory_test.py  interpreter.py  llmreranker.py  main.py  memory.py  memory_manager.py  memory_manager_test.py  memory_search.py  (+24 more)
.github/workflows/: dev-release.yml  dev.yml  prod-release.yml  test_on_commit.yml
.github/workflows /: dev.yml
docker/: run.sh
tests/: agent_async_test.py  agent_manager_test.py  conftest.py  curie_test.py  functions_agent.py  generative_memory_test.py  get_functions_bench.py  memory_write_test.py  qdrant_retriever_test.py  test.py  test_document_summarizer.py  test_functions_manager.py  test_generative_conversation_summarized_memory.py  test_main.py  test_main.txt  test_memory_summarizer.py  vectorstore_upsert_test.py  web_manager_test.py
tests/qdrant/: test_add_texts.py  test_embedding_interface.py  test_from_texts.py  test_max_marginal_relevance.py  test_similarity_search.py
utils/: agents.json  functions.json  functions_one_by_one.json  functionsv2.json  push_functions.py  query_plan.ipynb
v1/: agent.py  async_upsert.py  bs_html_custom.py  curie_async.py  functions_endpoint.py  memory_search.py
